--- a/view/css/lichsudatphong.css
+++ b/view/css/lichsudatphong.css
@@ -4,30 +4,33 @@
     font-family: roboto;
     src: url(font/Roboto/Roboto-Regular.ttf);
 }
-body {
-    margin: 0;
-    padding: 0;
-    font-family: roboto;
+/* body {
     
-    
-}
-
-.container {
-    max-width: 1200px;
+    max-width: 1400px;
     margin: 0 auto;
+    
+} */
+.container{
+    margin: 0 auto;
+    max-width: 1300px;
+    padding: 0;
     margin-top: 60px;
     width: 100%;
     border: 1px solid gray;
     
 }
+
 .header{
     display: flex;
     justify-content: space-between;
     align-items: center;
     background-color: #fff;
     width: 100%;
-    height: 80px;
-    margin-bottom: 69px;
+    height: 60px;
+    margin: 0 auto;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    max-width: 1100px;
     border-bottom: 1px solid #E5E5E5;
     /* padding: 1em; */
     color: black;
@@ -84,26 +87,75 @@ nav ul li a:hover {
     border: 0;
     color: #fff;
 }
-H1{
+/* H1{
     text-align: center;
-}
-.body{
+} */
+/* .body{
     display: grid;
     grid-template-columns: 1fr;
     grid-gap: 60px;
     margin-top: 100px;
+} */
+
+body { margin: 20px; }
+
+.marquee {
+  height: 40px;
+  width: 100%;
+  background-color: #444;
+  color: #dee2e6;
+  overflow: hidden;
+  position: relative;
+ 
+  font-size: 20pt;
+}
+
+.marquee div {
+  display: block;
+  width: 200%;
+  height: 30px;
+
+  position: absolute;
+  overflow: hidden;
+
+  animation: marquee 5s linear infinite;
+}
+
+.marquee span {
+  float: left;
+  width: 50%;
+}
+
+@keyframes marquee {
+  0% { left: 0; }
+  100% { left: -100%; }
+}
+.container_body{
+    margin: 0 auto;
+    max-width: 1100px;
+}
+
+.infor{
+    font-size: 15pt;
+    
 }
 .thongtinnguoidat{
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
+    margin-top: 60px;
 }
+
 table,th,td{
 border: 1px solid;
 
 } 
-
-table.time{
-    width: 60px;
+.the{
+    background-color: darkgray;
+    text-align: center;
+        color: black;
+     
+}
+.thongtinphong{
+    margin-top: 60px;
+    margin-bottom: 60px;
 }
 table tr:nth-child(odd){
     background-color:#eee;
@@ -114,35 +166,44 @@ table tr:nth-child(even){
 table tr:nth-child(1){
     background-color:skyblue;
 }
+table.infor_nguoidat{
+    table-layout:fixed;
+	width:100%;
+    border-collapse:collapse;
+    text-align: center;
+}
 table.infor_phong{
     table-layout:fixed;
 	width:100%;
     border-collapse:collapse;
-    
+    text-align: center;
 }
 
-th, td {
+ th, td {
     padding: 15px;
     text-align: center;
-    /* border: 1px solid #dee2e6; */
-    white-space: nowrap; /* Ngăn chặn văn bản xuống dòng */
+    border: 1px solid #dee2e6; 
+     /* Ngăn chặn văn bản xuống dòng */
 }
+ h1{
+    text-align: center;
+    font-style: italic;
+    margin-top: 20px;
+ }
+ 
 .responsive-table {
     overflow-x: auto;
     
-}
-/* 
-table.infor_phong.loaiphong{width: 15%;}
+} 
+
+/* table.infor_phong.loaiphong{width: 15%;}
 table.infor_phong.image{width: 35%;}
 table.infor_phong.songuoi{width: 20%; text-align: center;}
 table.infor_phong.gia{width: 10%; text-align: center;}
-table.infor_phong.diachi{width: 20%; text-align: right;} */
-table.time{
-    width: 100%;
-}
-table.total{
-    float: right;
-}
+table.infor_phong.diachi{width: 20%; text-align: right;} */ */
+
+
+
 
 /* ------------------------ */
 
@@ -150,3 +211,41 @@ footer>ul {
     margin: 0px;
     padding: 0px;
 }
+div.stars {
+    width: 270px;
+    display: inline-block;
+  }
+   
+  input.star { display: none; }
+   
+  label.star {
+    float: right;
+    padding: 10px;
+    font-size: 36px;
+    color: #444;
+    transition: all .2s;
+  }
+   
+  input.star:checked ~ label.star:before {
+    content: '\f005';
+    color: #FD4;
+    transition: all .25s;
+  }
+   
+  input.star-5:checked ~ label.star:before {
+    color: #FE7;
+    text-shadow: 0 0 20px #952;
+  }
+   
+  input.star-1:checked ~ label.star:before { color: #F62; }
+   
+  label.star:hover { transform: rotate(-15deg) scale(1.3); }
+   
+  label.star:before {
+    content: '\f006';
+    font-family: FontAwesome;
+  }
+
+/* ------------------------------ */
+
+  
