--- a/controller/bookedRoom/bRoom.css
+++ b/controller/bookedRoom/bRoom.css
@@ -53,3 +53,65 @@ tr td {
 #id {
     width: 130px;
 }
+
+select {
+    padding: 5px;
+    border-radius: 10px;
+}
+
+input.nut {
+    padding: 7px;
+    border-radius: 10px;
+    border: none;
+}
+.nut-add a {
+    text-decoration: none;
+    color: black;
+}
+
+.nut-add {
+    width: 80px;
+    height: 30px;
+    background-color: aqua;
+    border-radius: 10px;
+    margin-bottom: 10px;
+    border: 1px solid black;
+}
+
+table {
+    width: 100%;
+    font-size: 20px;
+    font-weight: 600;
+    margin-bottom: 20px;
+    text-align: center;
+}
+
+table th {
+    background-color: brown;
+    border-bottom: 2px solid #ffff;
+    color: aliceblue;
+    height: 50px;
+    border: 2px solid black;
+}
+
+td a {
+    text-decoration: none;
+    color: aliceblue;
+
+}
+
+tr {
+    width: 100%;
+    font-size: 20px;
+    font-weight: 600;
+    margin-bottom: 20px;
+    text-align: center;
+}
+
+tr td {
+    background-color: sienna;
+    border-bottom: 2px solid #ffff;
+    color: aliceblue;
+    height: 50px;
+    border: 2px solid black;
+}
