--- a/view/css/style.css
+++ b/view/css/style.css
@@ -115,7 +115,9 @@ nav ul li a:hover {
     margin: 30px 0;
 }
 
-.banner_item input {
+
+.search{
+    margin-bottom:20px ;
     width: 350px;
     height: 50px;
     border: 1px solid#3252DF;
@@ -124,14 +126,8 @@ nav ul li a:hover {
     padding-left: 20px;
     font-size: 18px;
 }
-
-.banner_item .banner_search {
-    display: grid;
-    grid-template-columns: 350px 100px;
-    height: 50px;
-}
-
-.banner_item .banner_search button {
+.submit {
+    margin-bottom:20px ;
     width: 100px;
     height: 50px;
     background-color: #3252DF;
@@ -139,6 +135,14 @@ nav ul li a:hover {
     border: none;
     color: rgb(255, 255, 255);
 }
+
+.banner_item .banner_search {
+    display: grid;
+    grid-template-columns: 350px 100px;
+    height: 50px;
+}
+
+
 
 .banner_item .banner_search button:hover {
     background-color: rgb(255, 97, 97);
@@ -178,6 +182,7 @@ nav ul li a:hover {
 }
 
 .content_item {
+    margin-top:20px ;
     background-color: rgb(244, 244, 244);
     height: 350px;
     border-radius: 10px;
