Password and Data

--- a/view/css/login.css
+++ b/view/css/login.css
@@ -1,58 +1,68 @@
-body{
+body {
     background: url('../img/background-login.jpg');
     font-size: 6px;
 }
-.wrapper{
+
+.wrapper {
     min-height: 100vh;
     display: flex;
     justify-content: center;
     align-items: center;
 }
-.form-login{
+
+.form-login {
     max-width: 400px;
     background: rgba(0, 0, 0, 0.8);
     flex-grow: 1;
     padding: 30px 30px 40px;
     box-shadow: 0px 0px 20px 20px rgba(254, 253, 253, 0.8);
 }
-.form-heading{
+
+.form-heading {
     font-size: 35px;
     color: white;
     text-align: center;
     margin-bottom: 30px;
 }
-.form-group{
+
+.form-group {
     border-bottom: 1px solid white;
     margin-top: 15px;
     margin-bottom: 20px;
 }
-.form-login i{
-   color: white;
-   font-size: 25px;
-   padding-right: 7px;
-   float: right;
-   padding-right: 0;
+
+.form-login i {
+    color: white;
+    font-size: 25px;
+    padding-right: 7px;
+    float: right;
+    padding-right: 0;
 }
-.form-login i:hover{
-  
+
+.form-login i:hover {
+
     background-color: red;
 }
-.form-group i{
-   color: white;
-   font-size: 14px;
-   padding-right: 7px;
-   float: left;
+
+.form-group i {
+    color: white;
+    font-size: 14px;
+    padding-right: 7px;
+    float: left;
 }
-.form-input{
+
+.form-input {
     background: transparent;
     border: 0;
     outline: 0;
     color: white;
 }
-.form-input::placeholder{
+
+.form-input::placeholder {
     color: white;
 }
-.form-submit{
+
+.form-submit {
     background: transparent;
     color: white;
     border: 1px solid white;
@@ -61,6 +71,13 @@ body{
     font-size: 20px;
     margin-top: 30px;
 }
-.form-submit:hover{
+
+.form-submit:hover {
     border: 1px solid rgb(84, 84, 225);
+}
+
+h2 {
+    font-size: 17px;
+    color: white;
+    /* text-align: left; */
 }
