--- a/controller/roomImage/image.css
+++ b/controller/roomImage/image.css
@@ -3,11 +3,12 @@
     color: black;
 }
 .nut-add{
+    width: 80px;
     height: 30px;
-    background: aqua;
+    background-color: #ba69bc;
     border-radius: 10px;
+    margin-bottom: 10px;
     border: 1px solid black;
-    margin-bottom: 20px;
 }
 table{
     width: 100%;
@@ -15,18 +16,16 @@ table{
     font-weight: 600;
     margin-bottom: 20px;
     text-align: center;
+    border-collapse: collapse;
 }
 table th{
-    background-color: brown;
-    border-bottom: 2px solid #ffff;
-    color: aliceblue;
+    background-color: #ba69bc;
+    color: black;
     height: 50px;
-    border: 2px solid black;
 }
 td a{
     text-decoration: none;
-    color: aliceblue;
-
+    color: black;
 }
 tr {
     width: 100%;
@@ -36,10 +35,10 @@ tr {
     text-align: center;
 }
 tr td{
-    background-color: sienna;
-    border-bottom: 2px solid #ffff;
-    color: aliceblue;
+    background-color: rgb(214, 210, 205);
     height: 50px;
-    border: 2px solid black;
 }
+th, td { border: 2px solid black;}
+
+
 
