--- a/controller/bookedRoom/bRoom.css
+++ b/controller/bookedRoom/bRoom.css
@@ -1,12 +1,12 @@
-.nut-add a {
+.nut a {
     text-decoration: none;
     color: black;
 }
 
-.nut-add {
+.nut {
     width: 80px;
     height: 30px;
-    background-color: aqua;
+    background-color: #ba69bc;
     border-radius: 10px;
     margin-bottom: 10px;
     border: 1px solid black;
@@ -18,20 +18,19 @@ table {
     font-weight: 600;
     margin-bottom: 20px;
     text-align: center;
+    border-collapse: collapse;
+    border-spacing: 0;
 }
 
 table th {
-    background-color: brown;
-    border-bottom: 2px solid #ffff;
-    color: aliceblue;
+    background-color: #ba69bc;
+    color: black;
     height: 50px;
-    border: 2px solid black;
 }
 
 td a {
     text-decoration: none;
-    color: aliceblue;
-
+    color: black;
 }
 
 tr {
@@ -43,13 +42,12 @@ tr {
 }
 
 tr td {
-    background-color: sienna;
-    border-bottom: 2px solid #ffff;
-    color: aliceblue;
+    background-color: rgb(214, 210, 205);
     height: 50px;
-    border: 2px solid black;
 }
 
-#id {
-    width: 130px;
+th,
+td {
+    border: 2px solid black;
+    padding: 15px;
 }
