--- a/controller/comment/cmt.css
+++ b/controller/comment/cmt.css
@@ -1,22 +1,37 @@
-table{
+.nut-add a {
+    text-decoration: none;
+    color: black;
+}
+
+.nut-add {
+    width: 80px;
+    height: 30px;
+    background-color: #ba69bc;
+    border-radius: 10px;
+    margin-bottom: 10px;
+    border: 1px solid black;
+}
+
+table {
     width: 100%;
     font-size: 20px;
     font-weight: 600;
     margin-bottom: 20px;
     text-align: center;
+    border-collapse: collapse;
 }
-table th{
-    background-color: brown;
-    border-bottom: 2px solid #ffff;
-    color: aliceblue;
-    height: 50px;
-    border: 2px solid black;
-}
-td a{
-    text-decoration: none;
-    color: aliceblue;
 
+table th {
+    background-color: #ba69bc;
+    color: black;
+    height: 50px;
 }
+
+td a {
+    text-decoration: none;
+    color: black;
+}
+
 tr {
     width: 100%;
     font-size: 20px;
@@ -24,11 +39,14 @@ tr {
     margin-bottom: 20px;
     text-align: center;
 }
-tr td{
-    background-color: sienna;
-    border-bottom: 2px solid #ffff;
-    color: aliceblue;
+
+tr td {
+    background-color: rgb(214, 210, 205);
     height: 50px;
-    border: 2px solid black;
 }
 
+th,
+td {
+    border: 2px solid black;
+    padding: 15px;
+}
