--- a/view/css/deitails.css
+++ b/view/css/deitails.css
@@ -369,7 +369,7 @@ footer {
     }
 
     .night {
-        color: #E5E5E5;
+        color: black;
         font-size: 30px;
     }
 
@@ -594,12 +594,14 @@ footer {
     }
 
     .tile span {
-        color: #B0B0B0;
-        font-size: 25px;
+        color: black;
+        font-size: 55px;
+        margin-bottom: 20px;
     }
 
     .tile h2 {
         padding: 10px 0;
+        margin-top: 40px;
     }
 
     .deitail-room {
@@ -630,13 +632,14 @@ footer {
     }
 
     .room-desc h3 {
-        font-size: 25px;
+        font-size: 30px;
         padding-top: 20px;
+        color: black;
     }
 
     .room-desc p {
         padding: 20px 0;
-        color: #B0B0B0;
+        color: black;
         width: 60%;
     }
 
