--- a/view/css/style.css
+++ b/view/css/style.css
@@ -153,7 +153,7 @@ nav ul li a:hover {
 
 .book_room {
     width: 80px;
-    height: 20px;
+    height: 30px;
     background-color: #3252DF;
     border: 0;
     border-radius: 4px;
@@ -161,6 +161,7 @@ nav ul li a:hover {
     font-size: 10px;
     font-weight: 600;
     letter-spacing: 1px;
+    margin-top: 20px;
 }
 
 .room {
@@ -174,12 +175,11 @@ nav ul li a:hover {
     margin-top: 70px;
     margin-bottom: 50px;
     text-transform: capitalize;
-    border-bottom: 3px solid #000;
 }
 
 .content_item {
     background-color: rgb(244, 244, 244);
-    height: 350px;
+    height: 420px;
     border-radius: 10px;
     text-align: center;
 }
@@ -212,7 +212,13 @@ nav ul li a:hover {
 
 .content_item p {
     margin: 15px 0;
-    font-size: 20px
+    font-size: 30px;
+    text-align: center;
+}
+.content_item span {
+    text-align: center;
+    font-size: 20px;
+    margin-bottom: 15px;
 }
 
 
