--- a/view/css/lichsudatphong.css
+++ b/view/css/lichsudatphong.css
@@ -1,13 +1,12 @@
-body{
+.invoice{
     margin-top:50px;
     background:#eee;
-    max-width: 1200px;
+    max-width: 1440px;
     margin: 0 auto;
 }
 
 .invoice {
     background: #fff;
-    padding: 20px
 }
 
 .invoice-company {
@@ -41,12 +40,7 @@ table.table table-invoice{
     font-weight: 600
 }
 img.cangiua {display: block; margin-left: auto; margin-right: auto;}
-/* .roomimg img{
-   
-    
-   
-    width: 150px;
-} */
+
 th,td{
     text-align: center;
 }
@@ -62,7 +56,8 @@ th,td{
 .invoice-price {
     background: #f0f3f4;
     display: table;
-    width: 100%
+    width: 1440px;
+    margin: 0 auto;
 }
 
 .invoice-price .invoice-price-left,
@@ -71,10 +66,7 @@ th,td{
     padding: 20px;
     font-size: 20px;
     font-weight: 600;
-    width: 75%;
-    position: relative;
-    vertical-align: middle
-    
+    width: 76.4%;
 }
 
 .invoice-price .invoice-price-left .sub-price {
@@ -94,35 +86,19 @@ th,td{
     float: left
 }
 
-.invoice-price .invoice-price-right {
-    width: 25%;
+.invoice-price-right {
     background: #2d353c;
     color: #fff;
-    font-size: 28px;
     text-align: right;
     vertical-align: bottom;
-    font-weight: 300
-}
-
-.invoice-price .invoice-price-right small {
-    display: block;
-    opacity: .6;
-    position: absolute;
-    top: 10px;
-    left: 10px;
-    font-size: 12px
 }
 
 .invoice-footer {
     border-top: 1px solid #ddd;
     padding-top: 10px;
-    font-size: 10px
-}
-
-.invoice-note {
-    color: #999;
-    margin-top: 80px;
-    font-size: 85%
+    font-size: 10px;
+    max-width: 1440px;
+    margin: 0 auto;
 }
 
 .invoice>div:not(.invoice-footer) {
@@ -133,4 +109,23 @@ th,td{
     color: #2d353c;
     background: #fff;
     border-color: #d9dfe3;
+}
+.table {
+    max-width: 1440px;
+    margin: 0 auto;
+    padding-top: 50px;
+}
+table th{
+    border-bottom: 1px solid #ffff;
+    height: 50px;
+    border: 1px solid rgb(121, 117, 117);
+}
+table tr td{
+    border-bottom: 1px solid #ffff;
+    border: 1px solid rgb(138, 132, 132);
+}
+
+table.table.table-invoice {
+    max-width: 1440px;
+    margin: 0 auto;
 }
