show_number_phone_and_search
Lợi

--- a/controller/order_detailed/order_detailed.css
+++ b/controller/order_detailed/order_detailed.css
@@ -49,3 +49,21 @@ tr td {
     height: 50px;
     border: 2px solid black;
 }
+
+.hangHoa .search input:nth-child(1){
+    width: 250px;
+    height: 40px;
+    margin: 20px 0;
+    padding-left: 20px;
+    border: 0;
+    background-color: #d3d3d3;
+}
+
+.hangHoa .search input:nth-child(2){
+    width: 80px;
+    height: 42px;
+    font-weight: bold;
+    border: 0;
+    background-color: #d3d3d3;
+    cursor: pointer;
+}
