--- a/view/css/user.css
+++ b/view/css/user.css
@@ -1,19 +1,20 @@
-/* .container{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-} */
 .tt{
     text-align: center;
     margin-bottom: 20px;
 }
 .tt label{
    padding-bottom: 20px;
+   font-weight: bold;
+   font-size: 20px;
+   padding-top: 20px;
+   margin-top: 20px;
 }
 
 h1{
     text-align: center;
     margin-bottom: 30px;
+    font-weight: bold;
+    font-size: 35px;
 }
 main .container {
     width: 500px;
@@ -33,5 +34,13 @@ main .container .ht{
     padding: 10px 10px;
     background-color: #dedede;
     border-radius: 10px;
+}
+footer{
+    margin-top: 50px;
+}
+.anh img{
+    border: 3px solid black;
+    border-radius: 130px;
+    margin-bottom: 15px;
 }
 
