--- a/controller/bookedRoom/bRoom.css
+++ b/controller/bookedRoom/bRoom.css
@@ -6,7 +6,7 @@
 .nut-add {
     width: 80px;
     height: 30px;
-    background-color: aqua;
+    background-color: #ba69bc;
     border-radius: 10px;
     margin-bottom: 10px;
     border: 1px solid black;
@@ -18,19 +18,19 @@ table {
     font-weight: 600;
     margin-bottom: 20px;
     text-align: center;
+    border-collapse: collapse;
+    border-spacing: 0;
 }
 
 table th {
-    background-color: brown;
-    border-bottom: 2px solid #ffff;
-    color: aliceblue;
+    background-color: #ba69bc;
+    color: black;
     height: 50px;
-    border: 2px solid black;
 }
 
 td a {
     text-decoration: none;
-    color: aliceblue;
+    color: black;
 }
 
 tr {
@@ -42,27 +42,38 @@ tr {
 }
 
 tr td {
-    background-color: sienna;
-    border-bottom: 2px solid #ffff;
-    color: aliceblue;
+    background-color: rgb(214, 210, 205);
     height: 50px;
+}
+
+th,
+td {
     border: 2px solid black;
+    padding: 15px;
 }
-
-.hangHoa .search input:nth-child(1){
-    width: 250px;
-    height: 40px;
-    margin: 20px 0;
-    padding-left: 20px;
-    border: 0;
-    background-color: #d3d3d3;
-}
-
-.hangHoa .search input:nth-child(2){
+button{
     width: 80px;
-    height: 42px;
-    font-weight: bold;
-    border: 0;
-    background-color: #d3d3d3;
-    cursor: pointer;
+    height: 20px;
+    background-color: #ba69bc;
+    border-radius: 10px;
+    color: black;
+    margin-bottom: 10px;
+    border: 1px solid black;
 }
+.timkiem{
+    padding: 10px 70px 10px 0px;
+    margin-bottom: 20px;
+ }
+ .submit{
+     padding: 10px 15px;
+     background-color: #ba69bc;
+ }
+ select{
+    width: 80px;
+    height: 20px;
+    background-color: #ba69bc;
+    border-radius: 10px;
+    color: black;
+    margin-bottom: 10px;
+    border: 1px solid black;
+ }
