--- a/view/css/style.css
+++ b/view/css/style.css
@@ -114,8 +114,6 @@ nav ul li a:hover {
     letter-spacing: 1px;
     margin: 30px 0;
 }
-
-
 .search{
     margin-bottom:20px ;
     width: 350px;
@@ -125,6 +123,7 @@ nav ul li a:hover {
     background-color: transparent;
     padding-left: 20px;
     font-size: 18px;
+    margin-top: 65px;
 }
 .submit {
     margin-bottom:20px ;
@@ -134,6 +133,7 @@ nav ul li a:hover {
     border-radius: 0px 8px 8px 0px;
     border: none;
     color: rgb(255, 255, 255);
+    margin-top: 65px;
 }
 
 .banner_item .banner_search {
@@ -184,7 +184,7 @@ nav ul li a:hover {
 .content_item {
     margin-top:20px ;
     background-color: rgb(244, 244, 244);
-    height: 350px;
+    height: 450px;
     border-radius: 10px;
     text-align: center;
 }
@@ -215,9 +215,19 @@ nav ul li a:hover {
     transform: scale(1.1);
 }
 
-.content_item p {
+.content_item strong {
     margin: 15px 0;
-    font-size: 20px
+    font-size: 35px
+}
+.content_item span{
+    margin: 20px 0px;
+    display: inline-block;
+    font-size: 20px;
+    color: black;
+}
+.book_room{
+    height: 50px;
+    width: 50%;
 }
 
 
