--- a/controller/user/user.css
+++ b/controller/user/user.css
@@ -24,3 +24,19 @@ label {
     margin-left: 15px;
     font-size: 20px;
 }
+
+.page {
+    text-align: center;
+    margin-top: 25px;
+}
+
+.page ul{
+    display: inline-block;
+    text-decoration: none;
+}
+
+.page ul a {
+    padding: 10px;
+    font-size: 20px;
+    color: black;
+}
