--- a/controller/quanTri.css
+++ b/controller/quanTri.css
@@ -41,3 +41,23 @@
 .content h1{
     text-align: center;
 }
+
+.categoryh{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    text-align: center;
+}
+.tillerh{
+    padding: 30px 30px;
+    margin: 20px;
+    border: 1px solid black;
+    border-radius: 20px;
+    background-color: #ba69bc;
+    
+}
+.tillerh a{
+    text-decoration: none;
+    font-weight: bold;
+    color: black;
+    font-size: 20px;
+}
