--- a/controller/bookedRoom/bRoom.css
+++ b/controller/bookedRoom/bRoom.css
@@ -6,7 +6,7 @@
 .nut-add {
     width: 80px;
     height: 30px;
-    background-color: aqua;
+    background-color: #ba69bc;
     border-radius: 10px;
     margin-bottom: 10px;
     border: 1px solid black;
@@ -18,19 +18,19 @@ table {
     font-weight: 600;
     margin-bottom: 20px;
     text-align: center;
+    border-collapse: collapse;
+    border-spacing: 0;
 }
 
 table th {
-    background-color: brown;
-    border-bottom: 2px solid #ffff;
-    color: aliceblue;
+    background-color: #ba69bc;
+    color: black;
     height: 50px;
-    border: 2px solid black;
 }
 
 td a {
     text-decoration: none;
-    color: aliceblue;
+    color: black;
 }
 
 tr {
@@ -42,12 +42,16 @@ tr {
 }
 
 tr td {
-    background-color: sienna;
-    border-bottom: 2px solid #ffff;
-    color: aliceblue;
+    background-color: rgb(214, 210, 205);
     height: 50px;
-    border: 2px solid black;
 }
+
+th,
+td {
+    border: 2px solid black;
+    padding: 15px;
+}
+
 
 .hangHoa .search input:nth-child(1){
     width: 250px;
@@ -65,4 +69,28 @@ tr td {
     border: 0;
     background-color: #d3d3d3;
     cursor: pointer;
+}
+.chucnang{
+    width: 40px;
+    height: 30px;
+    background-color: #ba69bc;
+    border-radius: 10px;
+    margin-bottom: 10px;
+    border: 1px solid black;
+}
+select{
+    width: 90px;
+    height: 30px;
+    background-color: #ba69bc;
+    border-radius: 10px;
+    margin-bottom: 10px;
+    border: 1px solid black;
+}
+input{
+    width: 40px;
+    height: 30px;
+    background-color: #ba69bc;
+    border-radius: 10px;
+    margin-bottom: 10px;
+    border: 1px solid black;
 }
