--- a/controller/kindRoom/kindRoom.css
+++ b/controller/kindRoom/kindRoom.css
@@ -1,34 +1,38 @@
-.nut-add a{
+.nut-add a {
     text-decoration: none;
     color: black;
 }
-.nut-add{
+
+.nut-add {
     width: 80px;
     height: 30px;
-    background-color: aqua;
+    background-color: #ba69bc;
     border-radius: 10px;
     margin-bottom: 10px;
     border: 1px solid black;
 }
-table{
+
+table {
     width: 100%;
     font-size: 20px;
     font-weight: 600;
     margin-bottom: 20px;
     text-align: center;
+    border-collapse: collapse;
+    border-spacing: 0;
 }
-table th{
-    background-color: brown;
-    border-bottom: 2px solid #ffff;
-    color: aliceblue;
-    height: 50px;
-    border: 2px solid black;
-}
-td a{
-    text-decoration: none;
-    color: aliceblue;
 
+table th {
+    background-color: #ba69bc;
+    color: black;
+    height: 50px;
 }
+
+td a {
+    text-decoration: none;
+    color: black;
+}
+
 tr {
     width: 100%;
     font-size: 20px;
@@ -36,27 +40,14 @@ tr {
     margin-bottom: 20px;
     text-align: center;
 }
-tr td{
-    background-color: sienna;
-    border-bottom: 2px solid #ffff;
-    color: aliceblue;
+
+tr td {
+    background-color: rgb(214, 210, 205);
     height: 50px;
+}
+
+th,
+td {
     border: 2px solid black;
+    padding: 15px;
 }
-
-.page {
-    text-align: center;
-    margin-top: 25px;
-}
-
-.page ul{
-    display: inline-block;
-    text-decoration: none;
-}
-
-.page ul a {
-    padding: 10px;
-    font-size: 20px;
-    color: black;
-}
-
