--- a/controller/roomImage/image.css
+++ b/controller/roomImage/image.css
@@ -1,33 +1,24 @@
-.nut-add a{
-    text-decoration: none;
-    color: black;
-}
-.nut-add{
-    height: 30px;
-    background: aqua;
-    border-radius: 10px;
-    border: 1px solid black;
-    margin-bottom: 20px;
-}
-table{
+table {
     width: 100%;
     font-size: 20px;
     font-weight: 600;
     margin-bottom: 20px;
     text-align: center;
+    border-collapse: collapse;
+    border-spacing: 0;
 }
-table th{
-    background-color: brown;
-    border-bottom: 2px solid #ffff;
-    color: aliceblue;
-    height: 50px;
-    border: 2px solid black;
-}
-td a{
-    text-decoration: none;
-    color: aliceblue;
 
+table th {
+    background-color: #ba69bc;
+    color: black;
+    height: 50px;
 }
+
+td a {
+    text-decoration: none;
+    color: black;
+}
+
 tr {
     width: 100%;
     font-size: 20px;
@@ -35,26 +26,27 @@ tr {
     margin-bottom: 20px;
     text-align: center;
 }
-tr td{
-    background-color: sienna;
-    border-bottom: 2px solid #ffff;
-    color: aliceblue;
+
+tr td {
+    background-color: rgb(214, 210, 205);
     height: 50px;
+}
+
+th,
+td {
     border: 2px solid black;
+    padding: 15px;
 }
-
-.page {
-    text-align: center;
-    margin-top: 25px;
-}
-
-.page ul{
-    display: inline-block;
-    text-decoration: none;
-}
-
-.page ul a {
-    padding: 10px;
+label{
+    margin-left: 15px;
     font-size: 20px;
+}
+.nut{
+    width: 80px;
+    height: 30px;
+    background-color: aqua;
+    border-radius: 10px;
     color: black;
+    margin-bottom: 10px;
+    border: 1px solid black;
 }
