--- a/view/css/style.css
+++ b/view/css/style.css
@@ -154,15 +154,15 @@ nav ul li a:hover {
 }
 
 .book_room {
-    width: 80px;
-    height: 20px;
+    padding: 20px 80px;
     background-color: #3252DF;
     border: 0;
-    border-radius: 4px;
+    border-radius: 30px;
     color: #fff;
     font-size: 10px;
     font-weight: 600;
     letter-spacing: 1px;
+    margin-top: 20px;
 }
 
 .room {
@@ -182,9 +182,16 @@ nav ul li a:hover {
 .content_item {
     margin-top: 20px;
     background-color: rgb(244, 244, 244);
-    height: 350px;
+    height: 430px;
     border-radius: 10px;
     text-align: center;
+}
+.content_item strong{
+    font-weight: bold;
+    font-size: 30px;
+}
+.content_item span {
+    font-size: 20px;
 }
 
 .content_item:hover {
@@ -238,7 +245,7 @@ footer {
     margin-top: 25px;
 }
 
-.page ul{
+.page ul {
     display: inline-block;
     text-decoration: none;
 }
@@ -249,11 +256,16 @@ footer {
     color: black;
 }
 
-.content_item strong{
+.content_item strong {
     font-weight: bold;
     margin: 15px 0;
     font-size: 25px;
     color: black;
     text-decoration: none;
     display: inline-block;
+}
+
+form {
+    margin-top: -200px;
+    margin-bottom: 200px;
 }
