--- a/controller/quanTri.css
+++ b/controller/quanTri.css
@@ -1,43 +1,70 @@
 .admin {
     display: grid;
     grid-template-columns: 200px 1fr;
-    /* grid-gap: 20px; */
 }
 
 .category {
-    background-color: rgb(214, 210, 205);
-    padding-top: 50px;
+    background-color: rgb(218, 232, 238);
+    padding-top: 30px;
+    padding-left: 20px;
+    border-radius: 15px;
+}
+
+.category-1 p{
+    color: rgb(18, 18, 19);
+    font-size: 20px;
+}
+.category-1 a p{
+    display: inline-block;
+    text-align: center;
+}
+
+.category-1 p:hover{
+    color: white;
+}
+
+.logout {
+    padding-top: 120px;
+}
+
+.logout p{
+    color: rgb(27, 23, 23);
+    font-size: 23px;
     padding-left: 20px;
 }
 
-.category-1 h2{
-    height: 100px;
-    color: rgb(13, 23, 117);
-}
-.category-1 a h2{
-    display: inline-block;
-}
-
-.category-1 h2:hover{
-    color: rgb(243, 22, 22);
-}
-
-.kind {
-    padding-top: 20px;
-}
-
-.logout h2{
-    color: rgb(121, 15, 15);
-}
-
-.logout h2:hover{
-    color: rgb(11, 242, 250);
+.logout p:hover{
+    color: rgb(0, 37, 250);
 }
 
 .content {
-    padding-top: 20px;
     padding-left: 20px;
 }
 .content h1{
     text-align: center;
+    color: #576162;
+    background-color: rgb(191 224 231);
+    margin-top: 5px;
+    margin-bottom: 10px;
+    padding: 18px 0px 12px 0px;
+    border-radius: 15px;
+}
+
+.test-1 a p {
+    padding-left: 20px;
+}
+
+.test-1:hover{
+    background-color: rgb(27, 108, 114);
+    border-radius: 20px;
+}
+
+.test-1 i {
+    color: rgb(23, 65, 112);
+    font-size: 25px;
+    padding-left: 2px;
+}
+
+.test-1 i:hover {
+    color: white;
 }
