--- a/controller/statistical/thongKe.css
+++ b/controller/statistical/thongKe.css
@@ -12,3 +12,33 @@
     margin-top: 60px;
     color: rgb(36, 40, 44);
 }
+
+.thong-ke {
+    margin-top: 50px;
+}
+
+.thong-ke h4:hover {
+    background-color: #ffdfdf;
+}
+
+.thong-ke h4 {
+    background-color: #d8d8d8;
+    color: #262629;
+    padding: 10px 10px 10px 10px;
+    margin-right: 290px;
+    text-align: center;
+    border-radius: 30px;
+}
+
+.two h3:hover {
+    background-color: #7e3d08;
+}
+
+.two h3 {
+    background-color: #60564e;
+    color: #ffffff;
+    padding: 10px 10px 10px 10px;
+    margin-right: 290px;
+    text-align: center;
+    border-radius: 30px;
+}
