--- a/controller/bookedRoom/bRoom.css
+++ b/controller/bookedRoom/bRoom.css
@@ -12,41 +12,34 @@
     border: 1px solid black;
 }
 
-table {
-    width: 100%;
-    font-size: 20px;
-    font-weight: 600;
-    margin-bottom: 20px;
-    text-align: center;
+button {
+    background-color: blue;
+    padding: 4px 10px 4px 10px;
+    border: solid 1px gray;
+    border-radius: 9px;
+    color: white;
 }
 
-table th {
-    background-color: brown;
-    border-bottom: 2px solid #ffff;
-    color: aliceblue;
-    height: 50px;
-    border: 2px solid black;
+button:hover{
+    background-color: rgb(11, 46, 85);
 }
 
-td a {
-    text-decoration: none;
-    color: aliceblue;
+input[type="button"] {
+    background-color: rgb(255, 0, 0);
+    padding: 4px 10px 4px 10px;
+    border: solid 1px gray;
+    border-radius: 9px;
+    color: white;
 }
 
-tr {
-    width: 100%;
-    font-size: 20px;
-    font-weight: 600;
-    margin-bottom: 20px;
-    text-align: center;
+input[type="button"]:hover {
+    background-color: rgb(95, 11, 11);
 }
 
-tr td {
-    background-color: sienna;
-    border-bottom: 2px solid #ffff;
-    color: aliceblue;
-    height: 50px;
-    border: 2px solid black;
+select {
+    padding: 4px;
+    border-radius: 10px;
+    background-color: white;
 }
 
 .hangHoa .search input:nth-child(1){
@@ -59,7 +52,7 @@ tr td {
 }
 
 .hangHoa .search input:nth-child(2){
-    width: 80px;
+    width: 90px;
     height: 42px;
     font-weight: bold;
     border: 0;
