--- a/view/css/deitails.css
+++ b/view/css/deitails.css
@@ -339,12 +339,6 @@ footer {
         padding-top: 20px;
     }
 
-    .room-desc p {
-        padding: 20px 0;
-        color: #B0B0B0;
-        width: 60%;
-    }
-
     .room-uitil {
         display: flex;
         justify-content: space-between;
@@ -637,7 +631,6 @@ footer {
     .room-desc p {
         padding: 20px 0;
         color: #B0B0B0;
-        width: 60%;
     }
 
     .room-uitil {
@@ -872,19 +865,96 @@ input.d1:hover {
     color: #f8f7f6;
 }
 
-/* .imgs {
+.danh-gia {
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
-    grid-gap: 20px;
+    grid-template-columns: 1fr 1fr;
+    margin: 50px 250px 50px 186px;
 }
 
-img {
-    border-radius: 20px;
-    margin-left: 25px;
-} */
-/* 
-.banner-right {
-    display: grid;
-    grid-template-columns: 1fr;
-    grid-gap: 20px;
+.img-danh-gia img {
+    border-radius: 25px 25px 105px 25px;
+}
+
+.text-danh-gia h3 {
+    padding-top: 70px;
+    padding-bottom: 84px;
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 600;
+    font-size: 33px;
+    line-height: 36px;
+    color: #152C5B;
+}
+
+.stars {
+    padding-bottom: 20px;
+}
+
+div.stars {
+    width: 270px;
+    display: inline-block;
+}
+
+input.star {
+    display: none;
+}
+
+label.star {
+    float: right;
+    padding: 10px;
+    font-size: 30px;
+    color: #444;
+    transition: all .2s;
+}
+
+input.star:checked~label.star:before {
+    content: '\f005';
+    color: #FD4;
+    transition: all .25s;
+}
+
+input.star-5:checked~label.star:before {
+    color: rgb(238, 255, 5);
+    text-shadow: 0 0 20px #952;
+}
+
+input.star-1:checked~label.star:before {
+    color: #F62;
+}
+
+label.star:hover {
+    transform: rotate(-15deg) scale(1.3);
+}
+
+label.star:before {
+    content: '\f006';
+    font-family: FontAwesome;
+}
+
+.text-danh-gia p {
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 32px;
+    line-height: 48px;
+    color: #152C5B;
+}
+
+i.fas.fa-user {
+    font-size: 30px;
+}
+/* .text-danh-gia button {
+    background: #3252DF;
+    border-radius: 7px;
+    line-height: 170%;
+    padding: 10px 60px 10px 60px;
+    color: white;
+    font-size: 18px;
+    border: none;
+    margin-top: 32px;
+    margin-left: 100px;
+}
+
+.text-danh-gia button:hover {
+    background-color: rgb(184, 12, 12);
 } */
